Two changes: 1. Revise YggAPI to allow request for specific file types 2. Merge DDLImporter back into Ygg